src/user.css
/* ... */
.view-homeShortcutsGrid-main *,
.main-card-cardContainer,
.view-homeShortcutsGrid-shortcut {
  transition: var(--ease-transition);
}
.Root__nav-bar,
.Root__main-view {
  position: relative;
  background: transparent !important;
  transition: var(--ease-transition);
}

.Root__main-view {
  overflow: hidden;
}

div[data-encore-id="popover"] {
  backdrop-filter: blur(var(--blur-radius)) saturate(1.5) brightness(0.5);
  background-color: rgba(var(--spice-rgb-main), 0.25) !important;
}

.encore-dark-theme .encore-announcement-set {
  --background-base: rgba(var(--spice-rgb-card), 0.75);
  --background-highlight: rgba(var(--spice-rgb-card), 0.5);
  --background-press: rgba(var(--spice-rgb-card), 0.85);
  --background-elevated-base: rgba(var(--spice-rgb-card), 0.5);
  --background-elevated-highlight: rgba(var(--spice-rgb-card), 0.5);
  --background-elevated-press: rgba(var(--spice-rgb-card), 0.85);
  --background-tinted-base: rgba(var(--spice-rgb-card), 0.75);
  --background-tinted-highlight: rgba(var(--spice-rgb-card), 0.75);
  --background-tinted-press: rgba(var(--spice-rgb-card), 0.75);
}

.marketplace-grid {
  --minimumColumnWidth: 14rem;
  text-wrap: balance;
}

#marketplace-markdown,
.marketplace-readme__container {
  background: transparent !important;
  background-color: transparent !important;
}

.marketplace-tabBar-headerItemLink {
  padding: 0.2rem 16px;
}

.marketplace-header {
  background-color: transparent;
  padding: 0.5rem 0;
}

.marketplace-tabBar-nav {
  width: inherit;
}

.main-buddyFeed-container,
.Root__right-sidebar aside,
.Root__nav-bar {
  border-radius: var(--card-border-radius);
}

.main-buddyFeed-container,
.Root__right-sidebar aside {
  --background-base: rgba(var(--spice-rgb-sidebar), 0.5) !important;
  animation-delay: 100ms;
  animation-duration: 0.35s;
  animation-name: animate-fade-in-from-right;
  animation-fill-mode: forwards;
  animation-timing-function: ease;
}
.main-buddyFeed-content {
  background: none !important;
  height: 101% !important;
}

.Root__nav-bar {
  animation-delay: 100ms;
  animation-duration: 0.35s;
  animation-name: animate-fade-in-from-left;
  animation-fill-mode: forwards;
  animation-timing-function: ease;
}

@keyframes animate-fade-in-from-left {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0%);
  }
}
@keyframes animate-fade-in-from-right {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0%);
  }
}
@keyframes animate-fade-in-from-bottom {
  0% {
    transform: translateY(calc(var(--now-playing-bar-height) * 2));
  }
  100% {
    transform: translateY(0);
  }
}

.VuyYccxhpPjYpeMkPtBM {
  margin-top: 0;
}

.JyEYcCE6Oi_unrgfAZPy {
  max-width: 100%;
}

button.HD9s7U5E1RLSWKpXmrqx {
  background-color: transparent;
}

/* make topbar stay */
.main-topBar-historyButtons .main-topBar-forward {
  display: inline-flex !important;
}

/* lyrics */
.lyrics-lyrics-background {
  background-image: linear-gradient(
    315deg,
    var(--lyrics-color-background),
    rgba(0, 0, 0, 0.5)
  ) !important;
  background-size: 500%;
}
.lyrics-lyricsContent-lyric.lyrics-lyricsContent-highlight {
  color: white;
}

.lyrics-lyrics-contentWrapper {
  text-align: center;
}

.main-nowPlayingView-lyricsContent {
  font-weight: 600;
  font-family: "Poppins", var(--fallback-fonts, sans-serif) !important;
}

.Wrapper-medium-only-medium {
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
}

/* Topbar */
.main-topBar-container > *,
.main-topBar-topbarContent {
  -webkit-app-region: drag !important;
}

.main-topBar-topbarContentRight button,
.main-topBar-topbarContentRight *,
.main-topBar-historyButtons * {
  -webkit-app-region: no-drag;
}

.main-globalNav-historyButtons button {
  aspect-ratio: 1/1;
}

.Root__globalNav button {
  background-color: rgba(
    var(--spice-rgb-card),
    var(--bg-color-opacity-homeHeader)
  ) !important;
  border: var(--border-thickness) solid rgba(var(--spice-rgb-subtext), 0.125);
}

.Root__globalNav
  button:is([aria-label="Search"], [aria-label="Clear search field"]) {
  background-color: transparent !important;
  border: none !important;
}

.main-userWidget-box {
  background-color: rgba(var(--spice-rgb-main), 0.8);
}

.Root__globalNav {
  height: calc(24px + var(--panel-gap));
  margin-top: calc(var(--panel-gap) * -4.5);
}

.Root__globalNav > .main-topBar-topbarContentRight,
.bYqd4_UZsNOsNvO_TW1W,
.nmAHq8nfXRtoQmKU1gaF,
.main-globalNav-historyButtonsContainer,
.main-globalNav-searchContainer {
  scale: 0.95;
}

.main-globalNav-searchInputContainer .SFAoASy0S_LZJmYZ3Fh9 {
  background: rgba(
    var(--spice-rgb-card),
    var(--bg-color-opacity-homeHeader)
  ) !important;
}

/* search */

.x-searchInput-searchInputInput {
  color: var(--spice-text) !important;
  border: var(--border-thickness) solid var(--spice-light-border);
  border-radius: var(--card-border-radius) !important;
  padding-right: 72px;
  padding-left: 12px;
  height: 32px !important;
  transition: background-color ease-in 200ms;
}

.x-searchInput-searchInputInput:hover,
input:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.2) !important;
}

.x-searchInput-searchInputInput:focus,
input:focus {
  background-color: rgba(var(--spice-rgb-main), 0.7) !important;
  border-bottom: var(--spice-accent) solid var(--border-thickness);
  outline: none !important;
}

.x-searchInput-searchInputInput:focus-within {
  outline: none;
}

.x-searchInput-searchInputIconContainer {
  flex-direction: row-reverse;
  gap: var(--default-gap);
}

.x-searchInput-searchInputSearchIcon {
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/search.svg");
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/search.svg");
  background-color: var(--spice-subtext) !important;
  flex: 0;
  transform: scaleX(-1);
  height: 16px;
  width: 16px;
}

.x-searchInput-searchInputSearchIcon path {
  display: none;
}
/* ... */

